--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "author": "Philipp Dieter <philipp@glanzstueck.agency>",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2"
+    "cheerio": "^0.22.0"
   }
 }
