[FEATURE] Make plugin always write asset constants file to disk

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Philipp Dieter <philipp@glanzstueck.agency>",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^0.22.0"
+    "cheerio": "^0.22.0",
+    "mkdirp": "^0.5.1"
   }
 }
