--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Philipp Dieter <philipp@glanzstueck.agency>",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^0.22.0",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "webpack-sources": "^1.4.3"
   }
 }
